New header and favicon for index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,20 @@
 <head>
     <title>Timestamp microservice</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcun icon" href="img/favicon.ico">
+    <link rel="shortcun icon" href="img/fav-16.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet">
 </head>
 <div class="contained">
+    <div class="cfx">
+        <a href="https://www.freecodecamp.org/">
+            <img class="fcc-ico" 
+                 src="https://cdn-images-1.medium.com/max/1200/1*B6_f-_SxscJ9FCuIjOrQAQ.jpeg" 
+                 alt="fcc-logo"
+                 target="_blank">
+        </a>
+        <p class="fcc-title">Apis and Microservices Projects</p> 
+    </div>
+    
     <h1>Timestamp microservice</h1>
     <h3>
         You can pass a string as a parameter, if that string contains either a unix
